--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyonna Mcneil
     </title>
+
+    <!-- Favicons  -->
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+<link rel="manifest" href="favicons/site.webmanifest">
+
 </head>
 <style>
     img {width: 50%;}
     body {
         background-color: rgb(187, 202, 251);
     }
-<body>
+</style>
+
+<body> 
     <h1>Hyonna Mcneil</h1> 
     
 
